# flashcast-review

./: .dockerignore  .gitignore  .prettierrc  README.md  package-lock.json  package.json  pnpm-lock.yaml  posgresql-snippet.md  tsconfig.base.json  use-case.md  work-with-generator.md
apps/clip-generator/: .env  .gitignore  Dockerfile  README.md  app.py  celeryconfig.py  load_env.py  pyproject.toml  tasks.py  tasks_test_py
apps/portal/: .env  .env.development  .env.production  .env.test  jest.setup.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/portal/prisma/: schema.prisma
apps/portal/src/app/: branding.tsx  globals.css  layout.tsx  login.tsx  nav-bar.tsx  page.tsx  providers.tsx  theme-switch.tsx  user-data-provider.tsx
apps/portal/src/asset/: clip-evaluation-negative.json  clip-evaluation-positive.json  score-mapper.json
apps/portal/src/factory/: index.ts
apps/portal/src/forms/: clip-negative.json  clip-positive.json
apps/portal/src/service/: api-service.ts  blob-service.ts  clip-generator-proxy.test.ts  clip-generator-proxy.ts  clip-service.ts  db.ts  evaluation-services.ts  experiment-service.test.ts  experiment-service.ts  interface.ts  prisma-testing-util.ts  (+3 more)
deploy/: azure.md  docker-compose.yml
deploy/k8s/: acr.sh  deployment.yaml  loadbalancer.yaml
deploy/nextapp/: .dockerignore  Dockerfile
src/app/: login.tsx  providers.tsx
src/app/api/: route.ts
src/app/experiment/: page.tsx
src/app/experiment-sample/: page.tsx
src/app/sample/: page.tsx
src/service/: experiment-service.test.ts
(+36 files in other folders)
