[tool.poetry]
name = "flashcast-clip-generator-web"
version = "0.1.0"
description = ""
authors = ["Bo Lu <bolu1@microsoft.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
celery = "^5.3.6"
jsonschema = "^4.21.1"
redis = "^5.0.3"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
