[tool.poetry]
name = "flashcast-clip-generator-web"
version = "0.1.0"
description = ""
authors = ["Bo Lu <bolu1@microsoft.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
celery = "^5.3.6"
jsonschema = "^4.21.1"
redis = "^5.0.3"
requests = "^2.31.0"
sqlalchemy = "^2.0.28"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
